Limite set agitacion y ArcAir.exe